--- a/configuration/env.py.example
+++ b/configuration/env.py.example
@@ -3,23 +3,23 @@
 """
 # DESCRIPTION: The database name to use when connecting with the MySQL server.
 # MANDATORY: Yes.
-# DEFAULT SETTINGS: "DB_NAME".
+# DEFAULT SETTINGS: "db_name".
 # CUSTOM SETTINGS: Database name can be changed. Note that if
 # a database using that name already exists, it will be overwritten.
-DATABASE_NAME = "DB_NAME"
+DATABASE_NAME = "db_name"
 
 # DESCRIPTION: Host name i.e. The server on which MySQL is running.
 # MANDATORY: Yes.
-# DEFAULT SETTINGS: "DB_HOST".
+# DEFAULT SETTINGS: "db_host".
 # CUSTOM SETTINGS: Can be changed if different. Can be an IP
 # address as well if the MySQL server is not the local machine.
 # For more information, please check "https://dev.mysql.
 # com/doc/connector-python/en/".
-HOST = "DB_HOST"
+HOST = "db_host"
 
 # DESCRIPTION: The user name used to authenticate with the MySQL server.
 # MANDATORY: Yes.
-# DEFAULT SETTINGS: "DB_USER".
+# DEFAULT SETTINGS: "db_user".
 # CUSTOM SETTINGS: User must have at least the following MySQL
 # privileges CREATE, DROP, EXECUTE, INSERT, REFERENCES, SELECT,
 # and SHOW DATABASE.
@@ -27,12 +27,12 @@ HOST = "DB_HOST"
 # com/doc/connector-python/en/".
 # For more information specifically on privileges, please check
 # "https://dev.mysql.com/doc/refman/5.7/en/grant.html#grant-privileges".
-USER = "DB_USER"
+USER = "db_user"
 
 # DESCRIPTION: The password to authenticate the user with the MySQL server.
 # MANDATORY: Yes.
-# DEFAULT SETTINGS: "DB_PASSWORD".
+# DEFAULT SETTINGS: "db_password".
 # CUSTOM SETTINGS: Must be the password of the user corresponding account.
 # For more information, please check "https://dev.mysql.
 # com/doc/connector-python/en/".
-PASSWORD = "DB_PASSWORD"
+PASSWORD = "db_password"
