--- a/configuration/env.py.example
+++ b/configuration/env.py.example
@@ -11,7 +11,7 @@ DATABASE_NAME = "db_name"
 # DESCRIPTION: Host name i.e. The server on which MySQL is running.
 # MANDATORY: Yes.
 # DEFAULT SETTINGS: "db_host".
-# CUSTOM SETTINGS: Can be changed if different. Can be an IP
+# CUSTOM SETTINGS: Can be an IP
 # address as well if the MySQL server is not the local machine.
 # For more information, please check "https://dev.mysql.
 # com/doc/connector-python/en/".
