working on gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
 #  venv repo
 env/
 
-# #  file containing pricvate settings
-# configuration/env.py
+# file containing pricvate settings
+configuration/env.py
 
 #  repo conatining various uneliverable files
 99_other/
 
 #  pychache repos
-__pycache__/
+# __pycache__/
+# configuration/__pycache__/
+# controllers/__pycache__/
+# models/__pycache__/
+# views/__pycache__/
